fix: use assertInstanceOf instead of conditional block